# robust-binary-config

./: .gitignore  CHANGELOG.md  CMakeLists.txt  CONTRIBUTING.md  Makefile  README.md  SECURITY.md  robust_bin_config  robustcfg.pc.in
.github/: copilot-instructions.md
.github/workflows/: ci.yml  codeql.yml  python-syntax.yml  release.yml  sql-syntax.yml  static-analysis.yml
cmake/: robustcfgConfig.cmake.in
docs/: SDD.md
include/: robust_cfg.h
src/: cli.c  robust_bin_config.c  robust_cfg.c  robust_cfg_format.h
tests/: test_concurrent.c  test_fault_inject.c  test_helpers.h  test_read_write.c
